@@ -1,6 +1,6 @@
 package fr.slickteam.hubspot.api.service;
 
-import com.fasterxml.jackson.databind.JsonNode;
+import tools.jackson.databind.JsonNode;
 import fr.slickteam.hubspot.api.domain.*;
 import fr.slickteam.hubspot.api.utils.HubSpotException;
 import fr.slickteam.hubspot.api.utils.HubSpotOrdering;
@@ -205,7 +205,7 @@ public class HSCompanyService {
             HSAssociationTypeOutput associationType = new HSAssociationTypeOutput();
             // Create association type from JSON Object
             JsonNode jsonAssociationType = jsonAssociation.path("associationTypes").path(0);
-            associationType.setLabel(jsonAssociationType.path("label").asText());
+            associationType.setLabel(jsonAssociationType.path("label").asString());
             associationType.setTypeId(jsonAssociationType.path("typeId").asInt());
             // Create associated company and add it to a list
             HSAssociatedCompany associatedCompany = new HSAssociatedCompany(associationType, company);
@@ -234,7 +234,7 @@ public class HSCompanyService {
             HSAssociationTypeOutput associationType = new HSAssociationTypeOutput();
             // Create association type from JSON Object
             JsonNode jsonAssociationType = jsonAssociation.path("associationTypes").path(0);
-            associationType.setLabel(jsonAssociationType.path("label").asText());
+            associationType.setLabel(jsonAssociationType.path("label").asString());
             associationType.setTypeId(jsonAssociationType.path("typeId").asInt());
             // Create associated company and add it to a list
             HSAssociatedCompany associatedCompany = new HSAssociatedCompany(associationType, company);
@@ -335,8 +335,8 @@ public class HSCompanyService {
             String nextPageToken = null;
             if (jsonNode.has(PAGING) && jsonNode.path(PAGING).has("next") &&
                     jsonNode.path(PAGING).path("next").path(AFTER) != null &&
-                    jsonNode.path(PAGING).path("next").path(AFTER).asText().length() > 1) {
-                nextPageToken = jsonNode.path(PAGING).path("next").path(AFTER).asText();
+                    jsonNode.path(PAGING).path("next").path(AFTER).asString().length() > 1) {
+                nextPageToken = jsonNode.path(PAGING).path("next").path(AFTER).asString();
             }
             return new PagedHSCompanyList(companies, nextPageToken);
         } catch (HubSpotException e) {
@@ -357,30 +357,31 @@ public class HSCompanyService {
     public Long getTotalNumberOfCompanies() throws HubSpotException {
         log.log(DEBUG, "getTotalNumberOfCompanies");
         String url = COMPANY_URL_V3 + SEARCH;
-        String searchProperties = "{\n" +
-                "  \"filterGroups\": [\n" +
-                "    {\n" +
-                "      \"filters\": [\n" +
-                "        {\n" +
-                "          \"propertyName\": \"hs_object_id\",\n" +
-                "          \"operator\": \"HAS_PROPERTY\"\n" +
-                "        },\n" +
-                "        {\n" +
-                "          \"propertyName\": \"hs_parent_company_id\",\n" +
-                "          \"operator\": \"HAS_PROPERTY\"\n" +
-                "        }\n" +
-                "      ]\n" +
-                "    }\n" +
-                "  ],\n" +
-                "  \"sorts\": [\n" +
-                "    \"name\"\n" +
-                "  ],\n" +
-                "  \"properties\": [\n" +
-                "    \"name\"\n" +
-                "  ],\n" +
-                "  \"limit\": 0,\n" +
-                "  \"after\": 0\n" +
-                "}";
+        String searchProperties = """
+                {
+                  "filterGroups": [
+                    {
+                      "filters": [
+                        {
+                          "propertyName": "hs_object_id",
+                          "operator": "HAS_PROPERTY"
+                        },
+                        {
+                          "propertyName": "hs_parent_company_id",
+                          "operator": "HAS_PROPERTY"
+                        }
+                      ]
+                    }
+                  ],
+                  "sorts": [
+                    "name"
+                  ],
+                  "properties": [
+                    "name"
+                  ],
+                  "limit": 0,
+                  "after": 0
+                }""";
 
         JsonNode response = httpService.postRequest(url, searchProperties);
         return response.path("total").asLong();
@@ -458,7 +459,7 @@ public class HSCompanyService {
                                                                                              entry.getValue(),
                                                                                              null,
                                                                                              HubSpotSearchOperator.EQ))
-                                                                                     .collect(Collectors.toList());
+                                                                                     .toList();
 
         return searchSortedFiltered(filtersPropertyList, responseProperties, sortOrders, limit);
     }
@@ -515,8 +516,7 @@ public class HSCompanyService {
                 "          \"operator\": \"" + propertyFilter.getOperator().name() + "\",\n";
 
         switch (propertyFilter.getOperator()) {
-            case IN:
-            case NOT_IN:
+            case IN, NOT_IN:
                 filter += "          \"values\": \"[" + propertyFilter.getValues()
                                                                       .stream()
                                                                       .map(val -> "\"" + val + "\"")
@@ -526,8 +526,7 @@ public class HSCompanyService {
                 filter += "          \"highValue\": \"" + propertyFilter.getHighValue() + "\",\n";
                 filter += "          \"value\": \"" + propertyFilter.getValue() + "\"\n";
                 break;
-            case HAS_PROPERTY:
-            case NOT_HAS_PROPERTY:
+            case HAS_PROPERTY, NOT_HAS_PROPERTY:
                 filter += "          \"value\": \"\"\n";
                 break;
             default:
@@ -535,9 +534,11 @@ public class HSCompanyService {
                 break;
         }
 
-        filter += "        }" +
-                "      ]\n" +
-                "    }\n";
+        filter += """
+                        }\
+                      ]
+                    }
+                """;
         return filter;
     }
 
